--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
